local storage user settings, changes to watched currencies

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -14,7 +14,7 @@
     },
     "strictNullChecks": true,
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
   },
   "include": ["./src/**/*"]
 }
