--- a/app/package.json
+++ b/app/package.json
@@ -4,10 +4,9 @@
   "description": "Webpack configuration for react and typescript",
   "main": "index.js",
   "scripts": {
-    "start:dev": "npm run watch:css && webpack-dev-server --mode development --open --hot",
-    "build": "postcss src/tailwind.css -o src/main.css && webpack --mode production",
-    "lint": "eslint . --ext .ts",
-    "watch:css": "postcss src/tailwind.css -o src/main.css"
+    "start:dev": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production",
+    "lint": "eslint . --ext .ts"
   },
   "keywords": [
     "webpack",
@@ -54,6 +53,7 @@
     "react": "^17.0.0",
     "react-dom": "^16.13.0",
     "react-hook-form": "^7.22.5",
+    "react-number-format": "^4.9.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-ticker": "^1.3.0",
